...
            )
                .toTwoDecimals(), // restrict for two decimal points
            style = MaterialTheme.typography.labelLarge,
            modifier = Modifier
                .padding(top = 3.dp)
                .semantics {
                    contentDescription = "currency value"
                },
            color = MaterialTheme.colorScheme.onSurface
        )
    }
}

@Preview(name = "Light Mode", showBackground = true)
@Composable
fun StaggeredCellPreview() {
    MaterialTheme {
        StaggeredCell(
            currency = Currency(currencyCode = "USD", 1.0)
        )
    }
}

