...
    ) {

        Text(
            text = currency.currencyCode,
            modifier = Modifier
                .semantics {
                    contentDescription = "currency code"
                }
                .padding(end = 10.dp),
            textAlign = TextAlign.End,
            style = MaterialTheme.typography.bodyLarge,
            color = MaterialTheme.colorScheme.onBackground,
        )
...
